@@ -1,0 +1,31 @@
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
+      xmlns:tal="http://xml.zope.org/namespaces/tal"
+      xmlns:metal="http://xml.zope.org/namespaces/metal"
+      xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+      lang="en"
+      metal:use-macro="context/main_template/macros/master"
+      i18n:domain="plone">
+<body>
+
+<metal:content-core fill-slot="content-core">
+    <div tal:define="audio view/audio_only"
+         tal:attributes="style view/scale">
+        <span class="flowPlayerMessage discreet" i18n:translate="video_fallback">
+            If your video does not start playing shortly, please ensure
+            that you have JavaScript enabled and the latest version of
+            Adobe Flash Player (http://www.adobe.com/products/flashplayer/) installed.
+        </span>
+        <tal:comment tal:condition="nothing">
+         Do not put any text/image inside the following a tag. Flowplayer 
+         consider such text/image as a splash screen and does not display
+         itself until clicked!
+        </tal:comment>
+        <a tal:attributes="href view/href;
+                           class python:audio and 'autoFlowPlayer audio' or 'autoFlowPlayer video';
+                           style view/scale"></a>
+    </div>
+</metal:content-core>
+
+</body>
+</html>
+
